# ASKE-E

./: .gitignore  .gitlab-ci.yml  .gitmodules  404.html  ASKEE-lang.md  Dockerfile  README.md  about.html  aske-e.cabal  askpy.askee  cabal.haskell-ci  cabal.project  chime.askee  cities.txt  client_session_key.aes  coin.askee  docker-compose.yml  donu.html  easel.html  effect.html  event.html  example.html  hello.askee  hie.yaml  index.html  init.sh  let-variable.html  loe-driver.sh  loe-examples.sh  loe-metrics.py  loe-readme.txt  milestones.html  model.html  parameter-variable.html  print.html  rate.html  run-julia-server.sh  run-test  searchindex.js  searchindex.json  (+3 more)
app/: EvalTest.hs
jupyter/: CompositionDemoScript.ipynb  Demo.ipynb  Dockerfile  Pipfile  README.md  compose.ipynb  ensemble.ipynb  join-h-1.ipynb  join-h-2.ipynb  join.ipynb  setup.cfg
jupyter/Demo Notebooks/: FittingComposition Demo.ipynb  Model Simplification.ipynb  Simplification.ipynb  Skill Reporting.ipynb  sirs-simulated.csv
jupyter/askee/: askeekerneltest.py  genparser.sh
jupyter/askee_kernel/: __main__.py  askeekernel.py  kernel.json
jupyter/cpp/: runner1.cpp  runner2.cpp  sir-runner1  sir-runner1.csv  sir-runner2  sir-runner2.csv  sir.cpp
jupyter/data/: weekly_covid_case_counts.csv
jupyter/demo-notebooks/: Emmaa Demo.ipynb  FittingComposition Demo.ipynb  Overview.ipynb  Prognostics.ipynb  Simplification.ipynb  Skill Reporting.ipynb  sir-vd.easel
jupyter/impl/: ASKEECommand.g4  Initial testing 2020-1-21.ipynb  askeekernel.py  serip.deq
jupyter/models/: seird_hosp.easel  sir.easel
(+534 files in other folders)
