[metadata]
name = askee
version = 0.0.1
author = Galois
author_email = todo@galois.com
description = ASKE-E Jupyter kernel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaloisInc/ASKE-E
project_urls =
    Bug Tracker = https://github.com/GaloisInc/ASKE-E/issues
classifiers =
  Operating System :: OS Independent

[options]
package_dir =
  = askee_kernel
packages = find:
python_requires = >=3.6
install_requires =
  ipython
  ipykernel
  requests
  pylint
  tabulate

[options.packages.find]
where = askee_kernel
